[gd_scene load_steps=9 format=3 uid="uid://wtymqw4gadga"]

[ext_resource type="Script" path="res://SpikesTrap/spikes_trap.gd" id="1_1qt8o"]
[ext_resource type="Script" path="res://Player/damage.gd" id="2_p8ecd"]
[ext_resource type="Script" path="res://SpikesTrap/disarm_trap.gd" id="3_rw3ha"]
[ext_resource type="Texture2D" uid="uid://d22agmsu6pmgu" path="res://SpikesTrap/spikes_trap.svg" id="3_xok8x"]

[sub_resource type="Resource" id="Resource_3d6f5"]
script = ExtResource("2_p8ecd")
count = 1
dice_type = 4
modifier = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_xnnf1"]
radius = 300.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgg7k"]
size = Vector2(100, 100)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_sk08j"]
size = Vector2(100, 100)

[node name="Node2D" type="Node2D"]
position = Vector2(0, 1)
script = ExtResource("1_1qt8o")
damage = SubResource("Resource_3d6f5")

[node name="DetectionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea2D"]
shape = SubResource("CircleShape2D_xnnf1")

[node name="DisarmTrap" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_rw3ha")
action_name = "Disarm trap"

[node name="Area2D" type="Area2D" parent="DisarmTrap"]
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DisarmTrap/Area2D"]
shape = SubResource("RectangleShape2D_tgg7k")
debug_color = Color(1, 0, 0, 0.419608)

[node name="HiddenSpikes" type="Sprite2D" parent="."]
texture = ExtResource("3_xok8x")
region_enabled = true
region_rect = Rect2(0, 0, 100, 100)

[node name="ReleasedTrapSpikes" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xok8x")
region_enabled = true
region_rect = Rect2(100, 0, 100, 100)

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DetectedOverlay" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.0627451, 0.25098, 0.392157)
position = Vector2(-1, 0)
texture = SubResource("PlaceholderTexture2D_sk08j")

[connection signal="body_entered" from="DetectionArea2D" to="." method="_on_detection_area_entered"]
[connection signal="on_disarmed" from="DisarmTrap" to="." method="_on_disarmed"]
[connection signal="body_entered" from="DisarmTrap/Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
